<resources>
    <string name="app_name">Pets</string>
    <string name="edit_pet">Edit Pet</string>
    <string name="Overview">OverView</string>
    <string name="Gender">Gender</string>
    <string name="Measurement">Measurement</string>
    <string name="name">Name</string>
    <string name="breed">Breed</string>
    <string name="save">Save</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes or keep Editing ?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>

    <string name="editor_delete_pet_successful">Pet deleted</string>

    <!-- Toast message in editor when current pet has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_pet_failed">Error with deleting pet</string>

    <!-- Dialog message to ask the user to confirm deleting the current pet [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this pet?</string>

    <!-- Dialog button text for the option to confirm deleting the current pet [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current pet [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <string name="no_details">Fill the pet Details ?</string>
    <string name="fill">fill details</string>

</resources>